<resources>
    <string name="app_name">Challenge7FN</string>
    <string name="konfirmasi_pesanan">Konfirmasi Pesanan</string>
    <string name="metode_pengiriman">Metode Pengiriman</string>
    <string name="ambil_sendiri">Ambil Sendiri</string>
    <string name="dikirim">Dikirim</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="bayar_tunai">Bayar Tunai</string>
    <string name="dompet_digital">Dompet Digital</string>
    <string name="ringkasan_pembayaran">Ringkasan Pembayaran:</string>
    <string name="total_pembayaran_rp_39_000">Total Pembayaran: Rp. 39.000</string>
    <string name="pesan">Pesan</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="rp_20_000">Rp 20.000</string>
    <string name="deskripsi_makanan_yang_panjang_panjang">Deskripsi Makanan yang panjang panjang</string>
    <string name="lokasi_restaurant">Lokasi Restaurant</string>
    <string name="tampilkan_di_google_maps">Tampilkan di Google Maps</string>
    <string name="_0">0</string>
    <string name="tambah_ke_keranjang_rp_0">Tambah Ke Keranjang - Rp.0</string>
    <string name="username">Username</string>
    <string name="username2">Username</string>
    <string name="password">Password</string>
    <string name="password2">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="username3">Username</string>
    <string name="username4">Username</string>
    <string name="password3">Password</string>
    <string name="password4">Password</string>
    <string name="email">Email</string>
    <string name="email2">Email</string>
    <string name="no_telepon">No Telepon</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="home">Home</string>
    <string name="keranjang">Keranjang</string>
    <string name="profil">Profil</string>
    <string name="nama_item_makanan">Nama Item Makanan</string>
    <string name="rp_20_000_2">Rp. 20.000</string>
    <string name="_1">1</string>
    <string name="delete">Delete</string>
    <string name="catatan">Catatan:</string>
    <string name="tulis_catatan_disini">Tulis Catatan Disini</string>
    <string name="keranjang2">Keranjang</string>
    <string name="total_harga_rp_39_000">Total Harga: Rp. 39.000</string>
    <string name="pesan2">Pesan</string>
    <string name="hai_binarian">Hai binarian!</string>
    <string name="mau_makan_apa_hari_ini">Mau makan apa hari ini?</string>
    <string name="diskon_50">Diskon 50%!</string>
    <string name="pesan_makanan_dengan_aplikasi_dan_dapatkan_diskonmu">Pesan makanan dengan aplikasi dan dapatkan diskonmu</string>
    <string name="list_menu_makanan">List Menu Makanan</string>
    <string name="change_layout_button">Change Layout Button</string>
    <string name="profil2">Profil</string>
    <string name="informasi_profil">Informasi Profil</string>
    <string name="username5">Username</string>
    <string name="username6">Username</string>
    <string name="email3">Email</string>
    <string name="email4">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number2">Phone Number</string>
    <string name="nama_makanan2">Nama Makanan</string>
    <string name="rp_20_000_3">Rp 20.000</string>
    <string name="nama_item_makanan_2">Nama Item Makanan</string>
    <string name="rp_20_000_4">Rp. 20.000</string>
    <string name="_1_2">1</string>
    <string name="catatan_2">Catatan:</string>
</resources>