<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmOrderActivity">
    <!-- Tombol Kembali ke Keranjang -->
    <ImageButton
        android:id="@+id/btnBack2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitXY"
        android:src="@drawable/left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@null"/>


    <!-- Judul -->
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/konfirmasi_pesanan"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Garis Pemisah -->
    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/btnBack2"/>

    <TextView
        android:id="@+id/txtMethodDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metode_pengiriman"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <!-- Metode Pengiriman -->
    <LinearLayout
        android:id="@+id/btnMethodDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMethodDelivery">

        <RadioButton
            android:id="@+id/btnPickUp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/ambil_sendiri"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/btnDelivery"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dikirim"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Garis Pemisah -->

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/btnMethodDelivery"
        tools:layout_editor_absoluteX="0dp" />

    <!-- Daftar Item Keranjang -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <!-- Metode Pembayaran -->
    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        tools:layout_editor_absoluteX="-45dp" />

    <!-- Metode Pembayaran -->

    <TextView
        android:id="@+id/txtMethodPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metode_pembayaran"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <LinearLayout
        android:id="@+id/btnMethodPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMethodPayment">

        <RadioButton
            android:id="@+id/btnCash"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/bayar_tunai"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/btnDigital"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dompet_digital"
            android:textSize="18sp"/>
    </LinearLayout>

    <!-- Garis Pemisah -->

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/btnMethodPayment"
        tools:layout_editor_absoluteX="16dp" />

    <!-- Ringkasan Pembayaran -->
    <TextView
        android:id="@+id/txtPaymentSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ringkasan_pembayaran"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <!-- Total Pembayaran -->
    <TextView
        android:id="@+id/txtTotalPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/total_pembayaran_rp_39_000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPaymentSummary" />

    <!-- Tombol Pesan -->
    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pesan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalPayment" />

</androidx.constraintlayout.widget.ConstraintLayout>